# src/app/admin/router/product.ts
@@ -1,3 +1,6 @@
+import { ProductCategoryCreator } from "@/context/admin/product-category/application/create/product-category-creator";
+import { ProductCategoryCreatorRequest } from "@/context/admin/product-category/application/create/product-category-creator-request";
+import { DynamoProductCategoryRepository } from "@/context/admin/product-category/infrastructure/dynamo-product-category-repository";
 import { ProductCreator } from "@/context/admin/product/application/create/product-creator";
 import { ProductCreatorRequest } from "@/context/admin/product/application/create/product-creator-request";
 import { ProductFinder } from "@/context/admin/product/application/find/product-finder";
@@ -9,13 +12,16 @@ import { Router } from "express";
 import { v4 as uuidv4 } from "uuid";
 
 const productRepository = new DynamoProductRepository();
+const productCategoryRepository = new DynamoProductCategoryRepository();
 const router = Router();
 
 router.get(
-  "/product/:id",
+  "/product/:productId",
   asyncHandler(async (req, res) => {
     let action = new ProductFinder(productRepository);
-    let result = await action.find(new ProductFinderRequest(req.params.id));
+    let result = await action.find(
+      new ProductFinderRequest(req.params.productId)
+    );
     res.send(result.response());
   })
 );
@@ -36,6 +42,24 @@ router.post(
     let action = new ProductCreator(productRepository);
     await action.create(
       new ProductCreatorRequest(id, req.body.name, req.body.price)
+    );
+    res.status(201).send({
+      id,
+    });
+  })
+);
+
+router.post(
+  "/product/:productId/category",
+  asyncHandler(async (req, res) => {
+    let id = uuidv4();
+    let action = new ProductCategoryCreator(productCategoryRepository);
+    await action.create(
+      new ProductCategoryCreatorRequest(
+        id,
+        req.params.productId,
+        req.body.categoryId
+      )
     );
     res.status(201).send({
       id,
